--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
 
                     <div class="btn">
-                        <a href="Profile (3).pdf" id="resume"><span>Download CV</span><img
+                        <a href="Sourav resume.pdf" id="resume"><span>Download CV</span><img
                                 src="resume.svg" alt=""></a>
                         <a href="https://github.com/sourav-sahoo2005" id="github"><img src="githublogo.png"
                                 alt=""></a>
