--- a/index.html
+++ b/index.html
@@ -182,6 +182,23 @@
         <section id="projects">
             <span id="proj_head" class="bebas">My Projects</span>
             <div class="all_proj">
+                 <div class="weather indi_proj">
+                    <div class="proj_desc">
+                        <span>SpicyHub<div></div></span>
+                        <ul>
+                            <li>SpicyHub is a web application which created by using react js (router,components,state,props).</li>
+                            <li>It is a food delivery website which is a completely frontend project.</li>
+                            <li>User-friendly interface for easy navigation,Menu browsing with detailed item descriptions,Customizable orders with various options,Real-time order tracking (post-backend integration)</li>
+                            <li>This is my internship project at MindBrain Innovation Pvt. Ltd.</li>
+                        </ul>
+                        <button><a href="https://spicyhub.netlify.app/">Visit site</a></button>
+                        <button><a href="https://github.com/sourav-sahoo2005/SpicyHub-restaurant-ordering-website">Github</a></button>
+                    </div>
+                    <div id="proj_img">
+                        <div class="inner_img" id="spicyhub_img">
+                        </div>
+                    </div>
+                </div>
 
                 <div class="newsMonkey indi_proj">
                     <div id="proj_img">
@@ -197,7 +214,8 @@
                             <li>Here i can added react router for navigate multiple types of news like
                                 business,health,sports etc.</li>
                         </ul>
-                        <button>Konw More</button>
+                        <button><a href="">Visit site</a></button>
+                         <button><a href="">Github</a></button>
                     </div>
                 </div>
 
@@ -212,7 +230,8 @@
                             <li>When hover on the technology icon it can show you level of my learning of this
                                 technology.</li>
                         </ul>
-                        <button><a href="https://sourav-sahoo2005.github.io/sourav-portfolio/">Konw More</a></button>
+                        <button><a href="https://sourav-sahoo2005.github.io/sourav-portfolio/">Visit site</a></button>
+                         <button><a href="https://github.com/sourav-sahoo2005/sourav-portfolio">Github</a></button>
                     </div>
                     <div id="proj_img">
                         <div class="inner_img" id="Portfolio_img">
@@ -235,24 +254,8 @@
                             <li>It is not functional because i could not add any javascript it is completely UI part.
                             </li>
                         </ul>
-                        <button>Konw More</button>
-                    </div>
-                </div>
-
-                <div class="weather indi_proj">
-                    <div class="proj_desc">
-                        <span>Weather-Odisha<div></div></span>
-                        <ul>
-                            <li>Weather-Odisha is a web application which created by ony html,css and JavaScript.</li>
-                            <li>When we select a district of odisha in the select input tag it can show the weather
-                                update of this district on the dispay.</li>
-                            <li>All the project now you have visited based on my true knowledge.</li>
-                        </ul>
-                        <button>Konw More</button>
-                    </div>
-                    <div id="proj_img">
-                        <div class="inner_img" id="weather_img">
-                        </div>
+                        <button><a href="https://sourav-sahoo2005.github.io/Netflix-clone-UI/">Visit site</a></button>
+                         <button><a href="https://github.com/sourav-sahoo2005/Netflix-clone-UI">Github</a></button>
                     </div>
                 </div>
 
