update on contact and about and footer page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 
 <body>
@@ -55,14 +56,13 @@
                     </div>
 
                     <div class="btn">
-                        <a href="Sourav resume.pdf" id="resume"><span>Download CV</span><img
-                                src="resume.svg" alt=""></a>
-                        <a href="https://github.com/sourav-sahoo2005" id="github"><img src="githublogo.png"
+                        <a href="Sourav resume.pdf" id="resume"><span>Download CV</span><img src="resume.svg"
                                 alt=""></a>
+                        <a href="https://github.com/sourav-sahoo2005" id="github"><img src="githublogo.png" alt=""></a>
                         <a href="https://www.linkedin.com/in/sourav-sahoo-75840027a/" id="linkedin"><img
                                 src="inkedin.png" alt=""></a>
-                        <a href="https://www.instagram.com/ariya_krish_s/" id="instagram"><img
-                                src="insta icon.png" alt=""></a>
+                        <a href="https://www.instagram.com/ariya_krish_s/" id="instagram"><img src="insta icon.png"
+                                alt=""></a>
 
 
                     </div>
@@ -91,14 +91,11 @@
                         <li>
                             <p>Hey this is <span class="yellow">SOURAV </span>,Welcome to my Profile , i am a Computer
                                 Science student now Aspiring software developer, currently immersed in the world of Web
-                                development and frontend framework (react js) Intern.
+                                development and frontend framework (react js)  <span class="yellow">Intern at MindBrain Innovation Pvt. Ltd.</span>
                             </p>
                         </li>
                         <li>
-                            <p>Also working on many projects like <span class="yellow">WEATHER APP , TODO APP ,
-                                    CALCULATOR ,
-                                    NETFLIX UI , NEWS
-                                    APP etc .</span></p>
+                            <p>Building scalable web application by using  HTML , CSS , JAVASCRIPT , REACT </span></p>
                         </li>
                         <li>
                             <p>I always believe in GOD & hardworking.</p>
@@ -182,17 +179,21 @@
         <section id="projects">
             <span id="proj_head" class="bebas">My Projects</span>
             <div class="all_proj">
-                 <div class="weather indi_proj">
+                <div class="weather indi_proj">
                     <div class="proj_desc">
                         <span>SpicyHub<div></div></span>
                         <ul>
-                            <li>SpicyHub is a web application which created by using react js (router,components,state,props).</li>
+                            <li>SpicyHub is a web application which created by using react js
+                                (router,components,state,props).</li>
                             <li>It is a food delivery website which is a completely frontend project.</li>
-                            <li>User-friendly interface for easy navigation,Menu browsing with detailed item descriptions,Customizable orders with various options,Real-time order tracking (post-backend integration)</li>
+                            <li>User-friendly interface for easy navigation,Menu browsing with detailed item
+                                descriptions,Customizable orders with various options,Real-time order tracking
+                                (post-backend integration)</li>
                             <li>This is my internship project at MindBrain Innovation Pvt. Ltd.</li>
                         </ul>
                         <button><a href="https://spicyhub.netlify.app/">Visit site</a></button>
-                        <button><a href="https://github.com/sourav-sahoo2005/SpicyHub-restaurant-ordering-website">Github</a></button>
+                        <button><a
+                                href="https://github.com/sourav-sahoo2005/SpicyHub-restaurant-ordering-website">Github</a></button>
                     </div>
                     <div id="proj_img">
                         <div class="inner_img" id="spicyhub_img">
@@ -214,8 +215,10 @@
                             <li>Here i can added react router for navigate multiple types of news like
                                 business,health,sports etc.</li>
                         </ul>
-                        <button><a href="">Visit site</a></button>
-                         <button><a href="">Github</a></button>
+                        <!-- <button><a href="">Visit site</a></button>
+                        <button><a href="">Github</a></button> -->
+                        <p  style="margin-top: 20px;color: rgb(255, 30, 30);">link not active now</p>
+
                     </div>
                 </div>
 
@@ -231,7 +234,7 @@
                                 technology.</li>
                         </ul>
                         <button><a href="https://sourav-sahoo2005.github.io/sourav-portfolio/">Visit site</a></button>
-                         <button><a href="https://github.com/sourav-sahoo2005/sourav-portfolio">Github</a></button>
+                        <button><a href="https://github.com/sourav-sahoo2005/sourav-portfolio">Github</a></button>
                     </div>
                     <div id="proj_img">
                         <div class="inner_img" id="Portfolio_img">
@@ -255,7 +258,7 @@
                             </li>
                         </ul>
                         <button><a href="https://sourav-sahoo2005.github.io/Netflix-clone-UI/">Visit site</a></button>
-                         <button><a href="https://github.com/sourav-sahoo2005/Netflix-clone-UI">Github</a></button>
+                        <button><a href="https://github.com/sourav-sahoo2005/Netflix-clone-UI">Github</a></button>
                     </div>
                 </div>
 
@@ -263,25 +266,38 @@
         </section>
         <section id="contact">
             <span class="bebas">GET IN TOUCH</span>
-            <p><span>&#128222;</span>+91 9348121330 , +91 9556522749 (Only WhatsApp)</p>
+            <div id="contactinfo">
+                <div>
+                    <p class="getcontact"><i class="fas fa-phone" style="font-size: 18px; color: red;"></i> +91
+                        9348121330 (call)</p>
+                    <p> <i class="fab fa-whatsapp" style="font-size: 22px; color: rgb(4, 202, 4);"></i> +91 9556522749
+                        (Whatsapp)</p>
+                    <p class="getcontact" id="email"><i class="fas fa-envelope"
+                            style="font-size: 19px; color: rgb(0, 119, 255);"></i> <a
+                            href="mailto:souravsahoo26320@gmail.com"> souravsahoo26320@gmail.com</a></p>
+                </div>
 
-            <form id="emailForm">
-                <label for="subject">Subject:</label>
-                <input type="text" id="subject" name="subject" required><br><br>
-                <label for="message">Message:</label><br>
-                <textarea id="message" name="message" rows="5" required></textarea><br><br>
-                <button type="submit">Send Email</button>
-            </form>
+                <form id="emailForm">
+                    <label for="subject">Subject:</label>
+                    <input type="text" id="subject" name="subject" required><br><br>
+                    <label for="message">Message:</label><br>
+                    <textarea id="message" name="message" rows="5" required></textarea><br><br>
+                    <button type="submit">Send Email</button>
+                </form>
+            </div>
         </section>
         <div id="footer">
             <div>
-                <span style="color: white; font-size: 17px;">Also visit on</span>
+                <span style="color: white; font-size: 16px;">Also Visit On</span>
                 <div class="social">
-                    <a href="https://github.com/sourav-sahoo2005">Github</a>
-                    <a href="https://www.linkedin.com/in/sourav-sahoo-75840027a/">Linkedin</a>
-                    <a href="https://www.instagram.com/ariya_krish_s/">Instagram</a>
-                    <a href="https://www.facebook.com/profile.php?id=100071904551221">Facebook</a>
+                    <a href="https://github.com/sourav-sahoo2005"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/sourav-sahoo-75840027a/"> <i
+                            class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/ariya_krish_s/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=100071904551221"><i
+                            class="fab fa-facebook"></i></a>
                 </div>
+                <p style="padding-bottom:10px;">&copy;2025 Sourav Sahoo. All Rights Reserved</p>
 
             </div>
 
